Dynamic Geography cube.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<geometry-cube></geometry-cube>
+<geometry-cube texture="/assets/textures/crate.gif"
+    [size]="200"
+    [rotationSpeedX]="0.005"
+    [rotationSpeedY]="0.01"
+    [cameraZ]="400"
+    [fieldOfView]="70"
+    [nearClipping]="1"
+    [farClipping]="1000"></geometry-cube>
