Dynamic equirectangular panorama.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
+<panorama-equirectangular texture="/assets/textures/2294472375_24a3b8ef46_o.jpg"
+    [widthSegments]="60"
+    [heightSegments]="40"
+    [radius]="500"
+    [fieldOfView]="75"
+    [nearClipping]="1"
+    [farClipping]="1100"></panorama-equirectangular>
+<!--
 <geometry-cube texture="/assets/textures/crate.gif"
     [size]="200"
     [rotationSpeedX]="0.005"
@@ -6,3 +14,4 @@
     [fieldOfView]="70"
     [nearClipping]="1"
     [farClipping]="1000"></geometry-cube>
+-->
